--- a/notebooks/analysis/part_2/1_Consistency_of_scores.ipynb
+++ b/notebooks/analysis/part_2/1_Consistency_of_scores.ipynb
@@ -27,9 +27,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-21 13:25:26.687983: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-08-21 13:25:26.688027: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-08-21 13:25:26.688045: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-09-09 09:35:50.809784: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-09-09 09:35:50.809833: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-09-09 09:35:50.810698: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 14%|█▍        | 3/21 [00:55<04:50, 16.16s/it]"
+      "  5%|▍         | 1/21 [00:15<05:16, 15.82s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skipped S11_Fraction3.pkl for engine Casanovo4.2.0\n",
+      "skipped S11_Fraction3.pkl for engine NovoB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▍        | 3/21 [00:41<03:33, 11.86s/it]"
      ]
     },
     {
@@ -128,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 19%|█▉        | 4/21 [01:28<06:29, 22.89s/it]"
+      " 19%|█▉        | 4/21 [01:13<05:37, 19.87s/it]"
      ]
     },
     {
@@ -142,7 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 7/21 [03:27<08:41, 37.23s/it]"
+      " 33%|███▎      | 7/21 [03:09<08:18, 35.60s/it]"
      ]
     },
     {
@@ -158,7 +173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 38%|███▊      | 8/21 [04:03<07:58, 36.79s/it]"
+      " 38%|███▊      | 8/21 [03:45<07:40, 35.45s/it]"
      ]
     },
     {
@@ -175,7 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 9/21 [04:38<07:16, 36.40s/it]"
+      " 43%|████▎     | 9/21 [04:19<07:02, 35.23s/it]"
      ]
     },
     {
@@ -190,7 +205,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 48%|████▊     | 10/21 [04:47<05:04, 27.71s/it]"
+      " 48%|████▊     | 10/21 [04:27<04:55, 26.86s/it]"
      ]
     },
     {
@@ -208,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 20/21 [12:47<00:44, 44.13s/it]"
+      " 95%|█████████▌| 20/21 [12:18<00:43, 43.26s/it]"
      ]
     },
     {
@@ -222,7 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21/21 [13:09<00:00, 37.58s/it]\n"
+      "100%|██████████| 21/21 [12:39<00:00, 36.15s/it]\n"
      ]
     }
    ],
