--- a/notebooks/analysis/part_2/2_Classification_good_bad_predictions.ipynb
+++ b/notebooks/analysis/part_2/2_Classification_good_bad_predictions.ipynb
@@ -52,6 +52,35 @@
     "psmlist = psmlist[psmlist[\"qvalue\"] < .01]\n",
     "\n",
     "# 2. Add features\n",
+    "# Features to be included\n",
+    "features = [\n",
+    "    \"peplen\",\n",
+    "    \"charge\",\n",
+    "    \"precursor_mz\",\n",
+    "    \"mass_delta_precursor\",\n",
+    "    \"TIC\",\n",
+    "    \"missing_frag_bool\",\n",
+    "    \"missing_frag_sites\",\n",
+    "    \"missing_frag_proportion\",\n",
+    "    \"missing_frag_longest\",\n",
+    "    \"missing_frag_from_c\",\n",
+    "    \"missing_frag_from_n\",\n",
+    "    \"matched_intensity_pct\",\n",
+    "    \"missed_cleavages\",\n",
+    "    \"isotope_error\",\n",
+    "    \"n_large_unannot_peaks\",\n",
+    "    \"pct_intensity_large_unannot_peaks\",\n",
+    "    \"pct_peaks_annotated\",\n",
+    "    \"pct_unfragmented_precursor\",\n",
+    "    \"n_peaks\",\n",
+    "    \"precursor_peak_present\",\n",
+    "    \"mean_ppm_y\",\n",
+    "    \"mean_ppm_b\",\n",
+    "    \"pct_frag_y\",\n",
+    "    \"pct_frag_b\",\n",
+    "    \"hyperscore\"\n",
+    "]\n",
+    "\n",
     "\n",
     "\n",
     "# 3. Split the spectra\n",
