--- a/notebooks/analysis/part_1/2_exploration.ipynb
+++ b/notebooks/analysis/part_1/2_exploration.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,6 +503,27 @@
     "        ax=ax[x][y]\n",
     "    )\n",
     "    ax[x][y].set_title(f\"{engine}: {len(selection)} PSMs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.mean([int(x) for x in \"24-1-1-8-1-22-1-32-1-34\".split(\"-\")])"
    ]
   },
   {
@@ -1182,6 +1203,46 @@
     "        ax=ax[x][y]\n",
     "    )\n",
     "    ax[x][y].set_title(f\"{engine}: {len(selection)} PSMs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.584962500721156"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.log2(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp2(1)"
    ]
   },
   {
