--- a/notebooks/paper/s2_error_types/0_metadata.ipynb
+++ b/notebooks/paper/s2_error_types/0_metadata.ipynb
@@ -18,7 +18,7 @@
     "1. How do the errors look like ?\n",
     "2. Are these errors related to data characteristics ?\n",
     "\n",
-    "In the final section of this par serves as a link towards the third and final section of the paper.\n",
+    "In the final section of this part serves as a link towards the third and final section of the paper.\n",
     "\n",
     "<ins>*1 Sequence errors*</ins>\n",
     "\n",
@@ -40,7 +40,7 @@
     "\n",
     "It is clear that errors can be represented in multiple ways. \n",
     "\n",
-    "Of interest to ne is where these errors occur and what the nature of the errors are. Thus, in this section, the errors will be counted based on location and type.\n",
+    "Of interest to me is where these errors occur and what the nature of the errors are. Thus, in this section, the errors will be counted based on location and type.\n",
     "\n",
     "*1.1. Error location*\n",
     "\n",
