--- a/notebooks/paper/s1_performance_benchmark/2_3_refinement_rerank.ipynb
+++ b/notebooks/paper/s1_performance_benchmark/2_3_refinement_rerank.ipynb
@@ -6,11 +6,33 @@
    "source": [
     "Skip this part"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results in rescoring_beams\n",
+    "\n",
+    "TODO: Post-process with Spectralis-rescoring to compare the ability to re-rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "denovo_analysis_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
