--- a/notebooks/paper/s2_error_types/0_metadata.ipynb
+++ b/notebooks/paper/s2_error_types/0_metadata.ipynb
@@ -116,8 +116,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "denovo_analysis_env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
