--- a/notebooks/paper/s2_error_types/2_error_spectrum.ipynb
+++ b/notebooks/paper/s2_error_types/2_error_spectrum.ipynb
@@ -27,18 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from peak_pack.feature_generators import PeakFeatureGenerator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modification already exists in ModificationsDB. Skipping.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,8 +87,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 24285/24285 [00:02<00:00, 10498.31it/s]\n",
-      "100%|██████████| 24285/24285 [00:00<00:00, 59986.56it/s]\n"
+      "100%|██████████| 24285/24285 [00:02<00:00, 10653.15it/s]\n",
+      "100%|██████████| 24285/24285 [00:00<00:00, 33130.48it/s]\n"
      ]
     },
     {
@@ -103,8 +102,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61843/61843 [00:06<00:00, 9351.12it/s] \n",
-      "100%|██████████| 61843/61843 [00:00<00:00, 137185.31it/s]\n"
+      "100%|██████████| 61843/61843 [00:07<00:00, 8257.06it/s] \n",
+      "100%|██████████| 61843/61843 [00:00<00:00, 140837.44it/s]\n"
      ]
     },
     {
@@ -118,8 +117,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61955/61955 [00:04<00:00, 14376.79it/s]\n",
-      "100%|██████████| 61955/61955 [00:00<00:00, 139326.41it/s]\n"
+      "100%|██████████| 61955/61955 [00:04<00:00, 14199.61it/s]\n",
+      "100%|██████████| 61955/61955 [00:00<00:00, 129361.41it/s]\n"
      ]
     },
     {
@@ -133,8 +132,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 58682/58682 [00:04<00:00, 14276.65it/s]\n",
-      "100%|██████████| 58682/58682 [00:00<00:00, 140209.31it/s]\n"
+      "100%|██████████| 58682/58682 [00:04<00:00, 14101.31it/s]\n",
+      "100%|██████████| 58682/58682 [00:00<00:00, 127491.25it/s]\n"
      ]
     },
     {
@@ -148,8 +147,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61876/61876 [00:06<00:00, 9332.89it/s] \n",
-      "100%|██████████| 61876/61876 [00:00<00:00, 129843.75it/s]\n"
+      "100%|██████████| 61876/61876 [00:08<00:00, 7014.87it/s] \n",
+      "100%|██████████| 61876/61876 [00:00<00:00, 130263.00it/s]\n"
      ]
     },
     {
@@ -163,8 +162,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61562/61562 [00:06<00:00, 8849.08it/s] \n",
-      "100%|██████████| 61562/61562 [00:00<00:00, 143495.94it/s]\n"
+      "100%|██████████| 61562/61562 [00:04<00:00, 13215.60it/s]\n",
+      "100%|██████████| 61562/61562 [00:00<00:00, 144658.48it/s]\n"
      ]
     },
     {
@@ -178,8 +177,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30999/30999 [00:05<00:00, 5707.11it/s] \n",
-      "100%|██████████| 30999/30999 [00:00<00:00, 126841.22it/s]\n"
+      "100%|██████████| 30999/30999 [00:03<00:00, 9992.40it/s] \n",
+      "100%|██████████| 30999/30999 [00:00<00:00, 113989.26it/s]\n"
      ]
     },
     {
@@ -193,8 +192,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 61479/61479 [00:07<00:00, 8419.77it/s] \n",
-      "100%|██████████| 61479/61479 [00:00<00:00, 144992.50it/s]\n"
+      "100%|██████████| 61479/61479 [00:04<00:00, 12501.00it/s]\n",
+      "100%|██████████| 61479/61479 [00:00<00:00, 143229.48it/s]\n"
      ]
     },
     {
@@ -208,8 +207,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 62560/62560 [00:06<00:00, 10425.76it/s]\n",
-      "100%|██████████| 62560/62560 [00:00<00:00, 152753.31it/s]\n"
+      "100%|██████████| 62560/62560 [00:06<00:00, 10392.04it/s]\n",
+      "100%|██████████| 62560/62560 [00:02<00:00, 21775.08it/s]\n"
      ]
     },
     {
@@ -223,8 +222,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90817/90817 [00:12<00:00, 7022.75it/s] \n",
-      "100%|██████████| 90817/90817 [00:01<00:00, 54585.67it/s]\n"
+      "100%|██████████| 90817/90817 [00:08<00:00, 10537.16it/s]\n",
+      "100%|██████████| 90817/90817 [00:06<00:00, 14522.44it/s]\n"
      ]
     },
     {
@@ -238,8 +237,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 115178/115178 [00:12<00:00, 9463.97it/s]\n",
-      "100%|██████████| 115178/115178 [00:07<00:00, 16372.74it/s]\n"
+      "100%|██████████| 115178/115178 [00:12<00:00, 9324.25it/s]\n",
+      "100%|██████████| 115178/115178 [00:01<00:00, 63754.21it/s]\n"
      ]
     },
     {
@@ -253,8 +252,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 115417/115417 [00:08<00:00, 14419.71it/s]\n",
-      "100%|██████████| 115417/115417 [00:01<00:00, 64252.28it/s]\n"
+      "100%|██████████| 115417/115417 [00:08<00:00, 14235.87it/s]\n",
+      "100%|██████████| 115417/115417 [00:07<00:00, 14503.59it/s]\n"
      ]
     },
     {
@@ -268,8 +267,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 111287/111287 [00:07<00:00, 14378.40it/s]\n",
-      "100%|██████████| 111287/111287 [00:01<00:00, 66630.01it/s]\n"
+      "100%|██████████| 111287/111287 [00:07<00:00, 14213.93it/s]\n",
+      "100%|██████████| 111287/111287 [00:01<00:00, 65577.31it/s]\n"
      ]
     },
     {
@@ -283,8 +282,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 115362/115362 [00:12<00:00, 9442.88it/s]\n",
-      "100%|██████████| 115362/115362 [00:01<00:00, 61733.07it/s]\n"
+      "100%|██████████| 115362/115362 [00:12<00:00, 9334.64it/s]\n",
+      "100%|██████████| 115362/115362 [00:01<00:00, 62080.13it/s]\n"
      ]
     },
     {
@@ -298,8 +297,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 114725/114725 [00:08<00:00, 13439.28it/s]\n",
-      "100%|██████████| 114725/114725 [00:01<00:00, 67305.12it/s]\n"
+      "100%|██████████| 114725/114725 [00:17<00:00, 6559.42it/s] \n",
+      "100%|██████████| 114725/114725 [00:01<00:00, 66176.92it/s]\n"
      ]
     },
     {
@@ -313,8 +312,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 57640/57640 [00:05<00:00, 10152.14it/s]\n",
-      "100%|██████████| 57640/57640 [00:00<00:00, 60176.59it/s]\n"
+      "100%|██████████| 57640/57640 [00:05<00:00, 10078.12it/s]\n",
+      "100%|██████████| 57640/57640 [00:00<00:00, 59586.79it/s]\n"
      ]
     },
     {
@@ -328,8 +327,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 114064/114064 [00:08<00:00, 12726.66it/s]\n",
-      "100%|██████████| 114064/114064 [00:01<00:00, 66854.35it/s]\n"
+      "100%|██████████| 114064/114064 [00:09<00:00, 12570.77it/s]\n",
+      "100%|██████████| 114064/114064 [00:01<00:00, 65610.26it/s]\n"
      ]
     },
     {
@@ -343,8 +342,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 118245/118245 [00:11<00:00, 10356.05it/s]\n",
-      "100%|██████████| 118245/118245 [00:01<00:00, 71666.45it/s]\n"
+      "100%|██████████| 118245/118245 [00:22<00:00, 5224.21it/s]\n",
+      "100%|██████████| 118245/118245 [00:01<00:00, 70289.75it/s]\n"
      ]
     },
     {
@@ -358,8 +357,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83941/83941 [00:07<00:00, 10660.34it/s]\n",
-      "100%|██████████| 83941/83941 [00:01<00:00, 56432.74it/s]\n"
+      "100%|██████████| 83941/83941 [00:07<00:00, 10526.96it/s]\n",
+      "100%|██████████| 83941/83941 [00:01<00:00, 55625.49it/s]\n"
      ]
     },
     {
@@ -373,8 +372,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 107088/107088 [00:11<00:00, 9495.08it/s]\n",
-      "100%|██████████| 107088/107088 [00:01<00:00, 68370.07it/s]\n"
+      "100%|██████████| 107088/107088 [00:11<00:00, 9405.44it/s]\n",
+      "100%|██████████| 107088/107088 [00:01<00:00, 66543.16it/s]\n"
      ]
     },
     {
@@ -388,8 +387,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 107182/107182 [00:07<00:00, 14422.31it/s]\n",
-      "100%|██████████| 107182/107182 [00:01<00:00, 64310.03it/s]\n"
+      "100%|██████████| 107182/107182 [00:07<00:00, 14267.75it/s]\n",
+      "100%|██████████| 107182/107182 [00:01<00:00, 62907.58it/s]\n"
      ]
     },
     {
@@ -403,8 +402,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 103511/103511 [00:07<00:00, 14442.89it/s]\n",
-      "100%|██████████| 103511/103511 [00:01<00:00, 68276.68it/s]\n"
+      "100%|██████████| 103511/103511 [00:07<00:00, 14211.82it/s]\n",
+      "100%|██████████| 103511/103511 [00:01<00:00, 67304.34it/s]\n"
      ]
     },
     {
@@ -418,8 +417,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 107203/107203 [00:11<00:00, 9488.22it/s]\n",
-      "100%|██████████| 107203/107203 [00:01<00:00, 63937.30it/s]\n"
+      "100%|██████████| 107203/107203 [00:11<00:00, 9364.19it/s]\n",
+      "100%|██████████| 107203/107203 [00:01<00:00, 63692.30it/s]\n"
      ]
     },
     {
@@ -433,8 +432,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 106604/106604 [00:07<00:00, 13465.36it/s]\n",
-      "100%|██████████| 106604/106604 [00:01<00:00, 68692.17it/s]\n"
+      "100%|██████████| 106604/106604 [00:07<00:00, 13339.80it/s]\n",
+      "100%|██████████| 106604/106604 [00:01<00:00, 66450.47it/s]\n"
      ]
     },
     {
@@ -448,8 +447,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 53533/53533 [00:05<00:00, 10212.89it/s]\n",
-      "100%|██████████| 53533/53533 [00:16<00:00, 3226.30it/s] \n"
+      "100%|██████████| 53533/53533 [00:05<00:00, 10083.46it/s]\n",
+      "100%|██████████| 53533/53533 [00:00<00:00, 56553.53it/s]\n"
      ]
     },
     {
@@ -463,8 +462,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 106075/106075 [00:08<00:00, 12743.31it/s]\n",
-      "100%|██████████| 106075/106075 [00:01<00:00, 69709.19it/s]\n"
+      "100%|██████████| 106075/106075 [00:08<00:00, 12608.50it/s]\n",
+      "100%|██████████| 106075/106075 [00:19<00:00, 5546.67it/s]\n"
      ]
     },
     {
@@ -478,8 +477,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 109340/109340 [00:10<00:00, 10380.75it/s]\n",
-      "100%|██████████| 109340/109340 [00:01<00:00, 70384.14it/s]\n"
+      "100%|██████████| 109340/109340 [00:10<00:00, 10364.20it/s]\n",
+      "100%|██████████| 109340/109340 [00:01<00:00, 69475.76it/s]\n"
      ]
     },
     {
@@ -493,8 +492,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 67111/67111 [00:06<00:00, 10681.85it/s]\n",
-      "100%|██████████| 67111/67111 [00:01<00:00, 64549.48it/s]\n"
+      "100%|██████████| 67111/67111 [00:06<00:00, 10531.73it/s]\n",
+      "100%|██████████| 67111/67111 [00:01<00:00, 62367.96it/s]\n"
      ]
     },
     {
@@ -508,8 +507,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102427/102427 [00:10<00:00, 9494.99it/s]\n",
-      "100%|██████████| 102427/102427 [00:01<00:00, 89176.69it/s]\n"
+      "100%|██████████| 102427/102427 [00:10<00:00, 9428.41it/s]\n",
+      "100%|██████████| 102427/102427 [00:20<00:00, 4917.52it/s] \n"
      ]
     },
     {
@@ -523,8 +522,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102483/102483 [00:07<00:00, 14465.34it/s]\n",
-      "100%|██████████| 102483/102483 [00:01<00:00, 85317.66it/s]\n"
+      "100%|██████████| 102483/102483 [00:07<00:00, 14355.81it/s]\n",
+      "100%|██████████| 102483/102483 [00:01<00:00, 85955.99it/s]\n"
      ]
     },
     {
@@ -538,8 +537,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 96975/96975 [00:27<00:00, 3559.69it/s] \n",
-      "100%|██████████| 96975/96975 [00:01<00:00, 89653.96it/s] \n"
+      "100%|██████████| 96975/96975 [00:06<00:00, 14241.69it/s]\n",
+      "100%|██████████| 96975/96975 [00:01<00:00, 83787.00it/s] \n"
      ]
     },
     {
@@ -553,8 +552,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102518/102518 [00:10<00:00, 9491.87it/s]\n",
-      "100%|██████████| 102518/102518 [00:01<00:00, 84501.31it/s]\n"
+      "100%|██████████| 102518/102518 [00:10<00:00, 9434.80it/s]\n",
+      "100%|██████████| 102518/102518 [00:01<00:00, 84810.63it/s]\n"
      ]
     },
     {
@@ -568,8 +567,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101883/101883 [00:07<00:00, 13492.35it/s]\n",
-      "100%|██████████| 101883/101883 [00:01<00:00, 91574.71it/s]\n"
+      "100%|██████████| 101883/101883 [00:07<00:00, 13364.56it/s]\n",
+      "100%|██████████| 101883/101883 [00:01<00:00, 90710.65it/s]\n"
      ]
     },
     {
@@ -583,8 +582,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 51215/51215 [00:04<00:00, 10271.65it/s]\n",
-      "100%|██████████| 51215/51215 [00:00<00:00, 81823.64it/s] \n"
+      "100%|██████████| 51215/51215 [00:05<00:00, 10208.43it/s]\n",
+      "100%|██████████| 51215/51215 [00:00<00:00, 80163.48it/s]\n"
      ]
     },
     {
@@ -598,8 +597,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 101183/101183 [00:07<00:00, 12844.56it/s]\n",
-      "100%|██████████| 101183/101183 [00:23<00:00, 4314.95it/s] \n"
+      "100%|██████████| 101183/101183 [00:08<00:00, 12644.19it/s]\n",
+      "100%|██████████| 101183/101183 [00:01<00:00, 86957.98it/s]\n"
      ]
     },
     {
@@ -613,8 +612,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 103785/103785 [00:09<00:00, 10536.69it/s]\n",
-      "100%|██████████| 103785/103785 [00:01<00:00, 96464.23it/s]\n"
+      "100%|██████████| 103785/103785 [00:09<00:00, 10444.79it/s]\n",
+      "100%|██████████| 103785/103785 [00:01<00:00, 91708.98it/s]\n"
      ]
     }
    ],
